--- a/tyylit.css
+++ b/tyylit.css
@@ -52,8 +52,8 @@
     font-family: 'Spirax', cursive;
   }
   .header {
-    background-color:#453207;
-    color: #ffffff;
+    background-color:#654c107d;
+    color: #f4e5b7;
     padding: 15px;
     text-align: center;
   }
@@ -69,7 +69,7 @@
     margin-bottom: 7px;
     color: #ffffff;
     box-shadow: 10px 10px 5px gray;
-    transition: transform 0.1s ease-in-out; /*to define a smooth transition of the transform property*/
+    transition: transform 0.1s ease-in-out; 
   }
   .menu li a {
     text-decoration: none;
